Getting and showing the movie list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">PruebaIngresoMoviesWigilabs</string>
+    <string name="image_of_the_movie">Image of the movie</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="explore_more_movies">Explore more movies</string>
+    <string name="your_favorites">Your favorites</string>
+    <string name="unknown_error">There was an error</string>
 </resources>
