--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="explore_more_movies">Explore more movies</string>
     <string name="your_favorites">Your favorites</string>
-    <string name="unknown_error">There was an error</string>
+    <string name="there_was_error">There was an error</string>
     <string name="movie_s_image">Movie\'s Image</string>
     <string name="error_showing_movie_don_t_found">Error showing movie, don\'t found</string>
 </resources>
